<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:paddingStart="@dimen/padding"
        android:paddingEnd="@dimen/padding">

        <TextView
            android:id="@+id/name_text"
            style="@style/name"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/Pet_name"
            android:textAlignment="center"
            android:textColor="@android:color/black"
            android:textSize="@dimen/text_size" />

        <EditText
            android:id="@+id/nickname_edit"
            style="@style/name"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="#FFFFFF"
            android:ems="10"
            android:hint="@string/Whats_is_your_nickname"
            android:inputType="textShortMessage|textPersonName|textImeMultiLine"
            android:textAlignment="center" />

        <Button
            android:id="@+id/done_button"
            style="@style/Widget.AppCompat.Button.Colored"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:layout_marginTop="@dimen/layout_margin"
            android:baselineAligned="false"
            android:fontFamily="@font/roboto_thin"
            android:gravity="center"
            android:text="Done"
            android:textAlignment="center" />

        <TextView
            android:id="@+id/nickname_text"
            style="@style/name"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="#FFFFFF"
            android:textAlignment="center"
            android:visibility="gone" />

        <ImageView
            android:id="@+id/star_image"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/layout_margin"
            android:contentDescription="@string/yellow_star"
            app:srcCompat="@android:drawable/btn_star_big_on" />

        <ScrollView
            android:id="@+id/bio_scroll"
            style="@style/Style1"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginStart="@dimen/layout_margin"
            android:layout_marginEnd="@dimen/layout_margin">

            <LinearLayout
                android:id="@+id/text_layout"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:paddingStart="0dp"
                android:paddingEnd="16dp">

                <TextView
                    android:id="@+id/bio1_text"
                    style="@style/Style1"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="0dp"
                    android:drawableBottom="@drawable/boa"
                    android:lineSpacingMultiplier="1.2"
                    android:text="@string/bio" />

                <TextView
                    android:id="@+id/bio_2"
                    style="@style/Style1"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/bio2" />
            </LinearLayout>
        </ScrollView>

    </LinearLayout>
</layout>